# CodeEvolver

./: .gitignore  .modalignore  LICENSE  README.md  claude.md  modal_app.py  pyproject.toml
.claude/: settings.local.json
experiments/: extract_synthesized_logs.py  run.py  view.py
experiments/FactChecker/: input.py
experiments/MultihopGEPA/: input.py
experiments/hotpotGEPA/: CodeEvolver_Changes.md  DEBUG_AND_FIXES.md  TRAJECTORY_ACCESS_GUIDE.md  candidate.json  input.py  logs.txt  logs2.txt  logs_final.txt  logs_synthesized1.txt  logs_synthesized_with_resource_penalty.txt  logs_with_resource_penalty.txt  top_trajectories.txt
experiments/hover/: LogsWIP2.TXT  candidate_shortlived.json  input.py  log4.txt  logs v0.txt  logs.txt  logs3.txt  logs5.txt  logs6.txt  logs7.txt  logs8.txt  logs9.txt  logs_failed.txt  logs_shortlivedhover.txt  logs_synthesized.txt  logsfinal.txt  logswip.txt
scripts/: cleanup_branches.py  show_trajectories.py  show_trajectory.py  view.py
specs/: GEPA_STATE_UPDATES.md  TEST_ARCHITECTURE.md  change_request_payload.json  example_program.json  gepa_plan.md  gepa_requirements.md  gepa_requirements_old.md  github_guide.md  implementation_notes.md  requirements.md  security.md  service_options.md
src/: __init__.py  config.py  main.py  test_functions.py
src/core/: agent.py  (+6 more)
tests/: README.md  conftest.py  remote_unit_tests.py  test_coding_agent.py  test_constraint_checker.py  test_dspy_save_program.py  test_evaluate_endpoint.py  test_gepa.py  test_ghost_filtering_and_timeout.py  test_git_worktree.py  test_github_app_auth.py  unit_test.py
(+96 files in other folders)
